--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-    <meta charset="utf-8">
-    <title>Life as Lisa-Monique</title>
-</head>
-<body>
-    <h1>Welcome!</h1>
-    <p>This is my life in words</p>
-</body>
-</html>
+---
+layout: default
+---
+
+<h1>Welcome!</h1>
+<p>This is my life in words</p>
