--- a/about.html
+++ b/about.html
@@ -2,12 +2,13 @@
 layout: page
 title: 'About Me'
 thumbnail: DSC_0148.jpg
+meta: "Brief biography on the author."
 ---
 <div class="col-md-8">
     <div class="about-me">
         <p style="text-align: center;font-size: 12px; font-family: 'Open Sans'">
             <p>Welcome to <strong>Life as Lisa-Monique!</strong><br />
-            I'm Lisa and this is my blog. I'm a born and raised St. Lucian currently working towards my undergrad degree in Canada in Bioinformatics (don't worry, nobody knows what that is).</p>
+            I'm Lisa-Monique and this is my blog. I'm a born and raised St. Lucian currently working towards my undergrad degree in Canada in Bioinformatics (don't worry, nobody knows what that is).</p>
             <p>That means I'm a young, black, female, West-Indian in a white man's world. And honestly, I'm subliminally reminded of it everyday but that's a topic for another day.</p>
             <p>I also paint, draw, dance and basically anything else artistic/creative you can think of. Except writing that is, I absolutely hate writing. And I mean writing of all kinds: poems, short stories, essays everything.</p>
             <p>Then why start a blog you might be wondering? Honestly, I'm not entirely sure. I've wanted to do this for a long time and I finally decided that life is too short to not follow your passions and see where they lead. Hopefully I can use this platform to celebrate the good times, reflect on the bad and share with the world.</p>
