--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: page
 title: 'Contact Me'
 thumbnail: DSC_0116.jpg
+meta: "A form to contact the author of this site"
 ---
 <div class="col-md-8">
     <div class="about-me">
