--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,7 @@
 ---
 layout: archive
+title: "Archive"
+meta: "An archive of all posts to this site"
 ---
 {% for post in site.posts %}
 <div class="index-fullview">
